website/docs/engineer/AWS/cloud-demo-cf.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS CloudFormation Template: EC2 instance with user-data script and security groups'

Resources:
  MyEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro # Free tier eligible instance type
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI] # Amazon Linux AMI ID
      KeyName: CloudFormationEC2Key # Key pair name
      SecurityGroups:
        - Ref: InstanceSecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/sh

          #Install a LAMP stack
          dnf install -y httpd wget php-fpm php-mysqli php-json php php-devel
          dnf install -y mariadb105-server
          dnf install -y httpd php-mbstring

          #Start the web server
          chkconfig httpd on
          systemctl start httpd

          #Install the web pages for our lab
          if [ ! -f /var/www/html/immersion-day-app-php7.zip ]; then
            cd /var/www/html
            wget -O 'immersion-day-app-php7.zip' 'https://static.us-east-1.prod.workshops.aws/public/b8d66c76-0455-4d13-8acd-9002b999b537/assets/immersion-day-app-php7.zip'
            unzip immersion-day-app-php7.zip
          fi

          #Install the AWS SDK for PHP
          if [ ! -f /var/www/html/aws.zip ]; then
            cd /var/www/html
            mkdir vendor
            cd vendor
            wget https://docs.aws.amazon.com/aws-sdk-php/v3/download/aws.zip
            unzip aws.zip
          fi

          # Update existing packages
          dnf update -y

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

Mappings:
  RegionMap:
    ap-southeast-1:
      AMI: ami-02453f5468b897e31 # Amazon Linux 2023 AMI
    us-east-1:
      AMI: ami-0230bd60aa48260c6 # Amazon Linux 2023 AMI
    # Add other regions as needed
